--- a/CourseProject.ipynb
+++ b/CourseProject.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,157 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Size"
+    "## 3. Size\n",
+    "* Given \n",
+    "    $$ \\alpha = 0.05 $$\n",
+    "    $$ \\beta = 0.2 $$\n",
+    "    Calculate how many page view do you need for the experiment\n",
+    "    Below is the process how to calculate sample size given $\\alpha$, $\\beta$ and $d_{min}$\n",
+    "    \\begin{equation}\n",
+    "        Z_1 = \\Phi_{1}^{-1} \\left(\\frac{\\alpha}{2} \\right), X \\sim N\\left(0, SE\\right) \\\\\n",
+    "        Z_2 = \\Phi_{2}^{-1} \\left(\\beta \\right), X \\sim N\\left(d_{min}, SE\\right) \\\\\n",
+    "        SE = \\sqrt{p_0(1-p_0)(\\frac{1}{n_1}+\\frac{1}{n_2})}, n_1 = n_2 \\\\\n",
+    "        Z_1 = Z_2 \\\\\n",
+    "    \\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import scipy.stats\n",
+    "# practical significance level\n",
+    "dmin_p_enroll_upon_click = 0.01\n",
+    "#Probability of payment, given enroll\n",
+    "dmin_p_payment_upon_enroll = 0.01\n",
+    "#Probability of payment, given click\n",
+    "dmin_p_payment_upon_click = 0.0075"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.9599639845400545"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "-scipy.stats.norm.ppf(0.05/2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.8416212335729142"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scipy.stats.norm.ppf(0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def normal_test_sample_size(p, dmin, alpha, beta):\n",
+    "    SE_base = (p*(1-p))**0.5\n",
+    "    z_1 = abs(scipy.stats.norm.ppf(alpha/2))\n",
+    "    z_2 = abs(scipy.stats.norm.ppf(beta))\n",
+    "    # multiple by 2 since pooled standard error is p(1-p)*2/n\n",
+    "    n = ((z_1+z_2)*SE_base/dmin)**2 * 2\n",
+    "    return n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gross conversion - click size needed: 51398\n",
+      "retention - enrollment size needed: 78206\n",
+      "net conversion - click size needed: 54343\n",
+      "gross conversion - pageview size needed: 642474\n",
+      "retention - pageview size needed: 4739772\n",
+      "net conversion - pageview size needed: 679282\n"
+     ]
+    }
+   ],
+   "source": [
+    "click_gross_conversion = normal_test_sample_size(p_enroll_upon_click, dmin_p_enroll_upon_click, 0.05, 0.2) * 2\n",
+    "\n",
+    "enrollment_retention = normal_test_sample_size(p_payment_upon_enroll, dmin_p_payment_upon_enroll, 0.05, 0.2) * 2 \n",
+    "\n",
+    "click_net_conversion = normal_test_sample_size(p_payment_upon_click, dmin_p_payment_upon_click, 0.05, 0.2) * 2 \n",
+    "\n",
+    "print('gross conversion - click size needed: {0:.0f}'.format(click_gross_conversion))\n",
+    "print('retention - enrollment size needed: {0:.0f}'.format(enrollment_retention))\n",
+    "print('net conversion - click size needed: {0:.0f}'.format(click_net_conversion))\n",
+    "\n",
+    "print('gross conversion - pageview size needed: {0:.0f}'.format(click_gross_conversion/ctp_startfreetrial))\n",
+    "print('retention - pageview size needed: {0:.0f}'.format(enrollment_retention/p_enroll_upon_click/ctp_startfreetrial))\n",
+    "print('net conversion - pageview size needed: {0:.0f}'.format(click_net_conversion/ctp_startfreetrial))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Duration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Days needed to achive enough sample:118\n"
+     ]
+    }
+   ],
+   "source": [
+    "traffic = 1\n",
+    "duration = 4739772/cookie_overview/traffic\n",
+    "print('Days needed to achive enough sample:{0:.0f}'.format(duration))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Even if we devote 100% traffic of Udacity to the experiment, we will still need 118 days for generating enough sample size"
    ]
   },
   {
